fix: fixed issue with responsive layout on mobile

--- a/static/index.css
+++ b/static/index.css
@@ -155,3 +155,18 @@ body {
 #interpolation-image-wrapper img {
   border-radius: 5px;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+body {
+    overflow-x: hidden;
+}
+
+.carousel-item {
+    width: 100%;
+    max-width: 100%;
+}
